--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "element-ui": "^2.10.1",
     "vue": "^2.5.2",
